[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player2.gd" type="Script" id=1]
[ext_resource path="res://State2class/StateMachine2.gd" type="Script" id=2]
[ext_resource path="res://JumpStateT2.gd" type="Script" id=3]
[ext_resource path="res://Idle2.gd" type="Script" id=5]
[ext_resource path="res://FallStateT2.gd" type="Script" id=6]
[ext_resource path="res://MoveStateT2.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 40 )

[node name="Player2" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StateMachine2" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="IdleStateT2" type="Node2D" parent="StateMachine2"]
script = ExtResource( 5 )

[node name="MoveStateT2" type="Node2D" parent="StateMachine2"]
script = ExtResource( 7 )

[node name="FallStateT2" type="Node2D" parent="StateMachine2"]
script = ExtResource( 6 )

[node name="JumpStateT2" type="Node2D" parent="StateMachine2"]
script = ExtResource( 3 )
